# hackapizza_gas

./: .gitignore  README.md  extract_structured_info_dish.ipynb  hello.py  pyproject.toml  run.py  techinques_requirements.json
nbs/: Convert_Menu_to_json.ipynb  Estrai_pdftomd.ipynb  distance.ipynb  eda.ipynb  eda_questions.ipynb  example1.ipynb  extract_structured_info_dish.ipynb  lookuplist_ingredients.ipynb
src/: config.py  datamodels.py  utils.py
src/pipeline/: Convert_menu.py  extract_ingredients_techniques.py  matching.py  questions.py  recipes.py  recipes_matching.py
src/utils/: ingestion.py  llm.py  lookup_lists.py  matching.py  misc.py  questions.py  recipes.py
tests/unit/: test_matching.py
tests/unit/utils/: test_matching.py  test_misc.py  test_questions.py  test_recipes.py
